--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.2",
-    "axios": "^0.16.2",
+    "axios": "^0.19.0",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
+    "babel-jest": "^24.8.0",
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.26.0",
+    "braces": "^3.0.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
-    "eslint": "4.4.1",
+    "eslint": "^6.1.0",
     "eslint-config-react-app": "^2.0.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.35.0",
@@ -26,7 +27,9 @@
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "jest": "^24.8.0",
+    "mem": "^5.1.1",
+    "mime": "^2.4.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -42,9 +45,9 @@
     "redux-thunk": "^2.2.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.5.9",
+    "url-loader": "^2.1.0",
     "webpack": "3.5.1",
-    "webpack-dev-server": "2.7.1",
+    "webpack-dev-server": "^3.7.2",
     "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
   },
